--- a/ui/templates/pages/car-product.tmpl
+++ b/ui/templates/pages/car-product.tmpl
@@ -91,7 +91,7 @@
                     </div>
                     <div class="info-item">
                         <div class="info-label">Description Moteur</div>
-                        <div class="info-value">{{ with .CarProduct.EngineDescription }}{{ . }}{{ end }}</div>
+                        <div class="info-value">{{ with .CarProduct.EngineDescriptor }}{{ . }}{{ end }}</div>
                     </div>
                     <div class="info-item">
                         <div class="info-label">Type Motorisation</div>
